# dh_testing

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
dh_testing/: schema_test.py  slotdef_to_yaml.py
src/schema/: dh_testing.yaml  dh_testing_core.yaml  dh_testing_from_sheets.yaml  dh_testing_generated.yaml  examples_core.yaml
web/: index.html  menu.json  package-lock.json  package.json
web/schemas/: dh_testing.json
