[tool.poetry]
name = "dh_testing"
version = "0.1.0"
description = "Sandbox for testing the content of various minimal schemas vs DataHarmonizer"
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.3.1"
dpath = "^2.0.6"
schemasheets = "^0.1.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
